# Polymarket-oracle

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: betexplorer-scrape-trigger  import-dataset-trigger  kaggle-ou-probe-trigger
data/: club_fixtures.csv  club_fixtures_la_liga.csv  club_fixtures_premier_league.csv  la_liga_matches.csv  premier_league_matches.csv  serie_a_matches.csv
docs/: BETEXPLORER_SCRAPER.md  CACCIA_OU_2017_19.md  DATI.md  DIARIO.md  GLOSSARIO.md  MANUALE_SOPRAVVIVENZA.md  PANCHINA.md  PISTE.md  PLAYBOOK_NUOVA_LEGA.md  PROTOCOLLO_PREMATCH.md  STUDIO_PREMIER_LIGA.md
experiments/: README.md  prospettico_2026_27.md  prospettico_2026_27_dc.csv  runs.jsonl
files/: 0001-Fase-4a-fetcher-Understat-xG-e-Transfermarkt-rose-as.patch  0001-fase-4e-calendario-club-completo.patch  0002-Snapshot-arricchito-14-nuove-colonne-base-invariata.patch  0003-Test-arricchimento-alias-normalizzazione-nomi-join-x.patch  0004-Docs-Fase-4a-fonti-schema-colonne-copertura-e-limiti.patch  APPLICA.md  README.md  fase4a-arricchimento-dati.bundle  football_data_la_liga_bundle.json  football_data_premier_league_bundle.json  polymarket-oracle-fase4e.bundle
scripts/: _apply_fase70_squad_value_real.py  _fase52_common.py  _gen_cache.py  _restore_raw_cache.py  _run_ah_benchmark.py  _run_audit_diagnostics.py  _run_bivariate.py  _run_class_recal.py  _run_combo_analysis.py  _run_copula.py  _run_dc_from_market.py  _run_draw_balance.py  _run_draw_covariate.py  _run_draw_infl.py  _run_dynamic_gamma.py  _run_dynrho.py  _run_encompassing.py  _run_ensemble.py  _run_fase51_roi.py  (+89 more)
(+43 files in other folders)
