[project]
name = "football-oracle"
version = "0.1.0"
description = "Motore di stima delle probabilita reali di eventi sportivi (calcio), indipendente dalle piattaforme di scommessa."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
# Modelli di famiglia diversa dal Dixon-Coles (Fase 21+): gradient boosting,
# ecc. Non serve al modello core ne' ai test — solo agli script _run_*_gbm.
models = [
    "scikit-learn>=1.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
